--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "0.9.x"
+    "react-scripts": "0.9.x",
+    "styled-components": "^4.3.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "case-sensitive-paths-webpack-plugin": "^2.2.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
