--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gsap": "^2.1.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-gsap": "^1.2.0",
     "react-scripts": "0.9.x",
     "styled-components": "^4.3.2"
   },
