--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.1",
+    "apollo-boost": "^0.4.4",
     "axios": "^0.19.0",
+    "express": "^4.17.1",
+    "graphql": "^14.5.6",
     "gsap": "^2.1.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -14,6 +18,7 @@
   "devDependencies": {
     "case-sensitive-paths-webpack-plugin": "^2.2.0"
   },
+  "proxy": "http://localhost:8080",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
