--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "apollo-boost": "^0.4.4",
     "axios": "^0.19.0",
     "express": "^4.17.1",
+    "git": "^0.1.5",
     "graphql": "^14.5.6",
     "gsap": "^2.1.3",
     "react": "^16.9.0",
