--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/icons": "^4.5.1",
     "apollo-boost": "^0.4.4",
     "axios": "^0.19.0",
+    "clsx": "^1.0.4",
     "express": "^4.17.1",
     "git": "^0.1.5",
     "graphql": "^14.5.6",
